fluxcd/apps/base/directory-listing/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directory-deployment
spec:
  selector:
    matchLabels:
      app: directory
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes-excludes: files
      labels:
        app: directory
    spec:
      containers:
      - name: directory
        image: docker.io/p3terx/darkhttpd:1.14
        imagePullPolicy: IfNotPresent
        args:
        - /public
        resources:
          requests:
            memory: 128Mi
            cpu: 10m
          limits:
            memory: 128Mi
        ports:
        - containerPort: 80
