fluxcd/apps/base/directory-listing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directory-ingress
spec:
  rules:
  - host: domain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: directory-service
            port: 
              number: 8080
